[workspace]
members = ["programs/entropy", "programs/simple-requester"]
resolver = "2"

[workspace.dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
entropy = { path = "programs/entropy" }
solana-program = "2.3.0"
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
