[package]
name = "entropy-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Entropy CLI tool"

[dependencies]
anyhow = "1.0.86"
bs58 = "0.5.1"
bytemuck = { workspace = true }
clap = { version = "4.5.26", features = ["derive", "env"] }
ctrlc = "3.4.5"
entropy = { workspace = true }
owo-colors = "4.1.0"
rand = "0.8.5"
shellexpand = "2.1.2"
simple-requester = { path = "../programs/simple-requester" }
solana-client = "2.3.0"
solana-sdk = "2.3.0"
solana-transaction-status = "2.3.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
