[package]
name = "entropy"
version = "0.1.0"
edition = "2021"
description = "Entropy Solana program"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
solana-program = "2.3.0"
thiserror = "1.0.50"

[dev-dependencies]
solana-program-test = "3.0.0"
solana-sdk = "3.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
