[package]
name = "entropy"
version = "0.1.0"
edition = "2021"
description = "Entropy Solana program"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(feature, values(\"custom-heap\"))",
  "cfg(feature, values(\"custom-panic\"))",
  "cfg(target_os, values(\"solana\"))",
] }

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
solana-program = "2.3.0"
thiserror = "1.0.50"

[dev-dependencies]
solana-program-test = "2.3.0"
solana-sdk = "2.3.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
