[package]
name = "entropy"
version = "0.1.0"
edition = "2021"
description = "Entropy Solana program"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(feature, values(\"custom-heap\"))",
  "cfg(feature, values(\"custom-panic\"))",
  "cfg(target_os, values(\"solana\"))",
] }

[dependencies]
bytemuck = { workspace = true }
solana-program = { workspace = true }
thiserror = "1.0.50"

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
simple-requester = { path = "../simple-requester", features = ["no-entrypoint"] }
tokio = { workspace = true }
