[package]
name = "entropy"
version = "0.1.0"
edition = "2021"
description = "Entropy Solana program"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(feature, values(\"custom-heap\"))",
  "cfg(feature, values(\"custom-panic\"))",
  "cfg(target_os, values(\"solana\"))",
] }

[dependencies]
bytemuck = { workspace = true }
pinocchio = { version = "0.10.1", features = ["cpi"] }
pinocchio-system = "0.5.0"
solana-address = { version = "2.0.0", features = ["curve25519"] }
solana-sha256-hasher = "2.2.1"
thiserror = "1.0.50"

[dev-dependencies]
solana-program-test = { workspace = true }
solana-sdk = { workspace = true }
simple-requester = { path = "../simple-requester", features = ["no-entrypoint"] }
tokio = { workspace = true }
