[package]
name = "simple-requester"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Simple requester program for Entropy tests"

[lib]
crate-type = ["lib"]

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
entropy = { path = "../entropy" }
solana-program = "2.3.0"
