[package]
name = "simple-requester"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Simple requester program for Entropy tests"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  "cfg(feature, values(\"custom-heap\"))",
  "cfg(feature, values(\"custom-panic\"))",
  "cfg(target_os, values(\"solana\"))",
] }

[dependencies]
bytemuck = { workspace = true }
entropy = { workspace = true, features = ["no-entrypoint"] }
solana-program = { workspace = true }
